<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectedPlaceSaveActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_map_container"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_map_current_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:elevation="10dp"
            android:theme="@style/Toolbar"
            app:layout_constraintTop_toTopOf="@id/toolbar_map_container">

            <TextView
                android:id="@+id/toolbar_map_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00000000"
                android:text="장소 저장"
                android:textSize="20sp" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/container_current_place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_map_container"
        android:padding="30dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@drawable/view_bottom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_name"
            android:fontFamily="@font/notosanscjkkrlight"
            android:includeFontPadding="false"/>
        <TextView
            android:id="@+id/current_place_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Current Place Name"
            android:fontFamily="@font/notosanscjkkrregular"
            android:includeFontPadding="false"
            android:textSize="@dimen/my_text_size16"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_current_place_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/container_current_place_name"
        android:padding="30dp"
        android:orientation="vertical"
        android:background="@drawable/view_bottom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_address"
            android:fontFamily="@font/notosanscjkkrlight"
            android:includeFontPadding="false"/>
        <TextView
            android:id="@+id/current_place_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanscjkkrregular"
            android:includeFontPadding="false"
            android:text="Current Place Adress"
            android:textSize="@dimen/my_text_size16"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_current_place_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/container_current_place_address"
        android:padding="30dp"
        android:orientation="vertical"
        android:background="@drawable/view_bottom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanscjkkrlight"
            android:includeFontPadding="false"
            android:text="@string/place_user_name"/>

        <EditText
            android:id="@+id/current_place_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanscjkkrregular"
            android:includeFontPadding="false"
            android:textSize="@dimen/my_text_size16"
            android:textColorHint="@color/hintColor"
            android:hint="저장하시려는 장소에 이름을 붙여주세요"/>

    </LinearLayout>

    <TextView
        android:id="@+id/when_home_setting_help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanscjkkrlight"
        android:includeFontPadding="false"
        android:textSize="@dimen/my_text_size14"
        android:text="@string/string_first_home_setting"
        android:paddingHorizontal="20dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/container_current_place_user_name"/>




</androidx.constraintlayout.widget.ConstraintLayout>